Bug 154883 - Applying a Table Style in Impress should mark the file as "dirty" for saving
Summary: Applying a Table Style in Impress should mark the file as "dirty" for saving
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1 all versions
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-18 12:26 UTC by Rafael Lima
Modified: 2023-04-20 15:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-04-18 12:26:08 UTC
When you apply a table style in Impress, it does not mark the file as dirty (to indicate that it was modified and needs saving).

Steps to reproduce

1) Create a blank Impress document
2) Create a 4x4 table and fill it in with data.
3) Save the file
4) Apply one of the table styles in the sidebar
5) Notice that the file won't be marked as dirty; if you now try to close the file, it will close without warning that the file was changed

System info

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded
Comment 1 Maxim Monastirsky 2023-04-18 17:41:07 UTC
https://gerrit.libreoffice.org/c/core/+/150584
Comment 2 Commit Notification 2023-04-18 22:53:50 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61b41646c5a93ca24f2c9f143cdb0da2c9258989

tdf#154883 Set doc as modified on applying table style

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Rafael Lima 2023-04-20 14:53:36 UTC
@Xisco, this patch also fixes a minor bug in the new Table Styles feature.

Can this be cherry-picked as well?
Comment 4 Xisco Faulí 2023-04-20 15:01:32 UTC
Also reproduced in

Version: 6.0.0.0.alpha1+
Build ID: 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: es-ES (es_ES.UTF-8); Calc: group threaded
Comment 5 Xisco Faulí 2023-04-20 15:03:48 UTC
(In reply to Rafael Lima from comment #3)
> @Xisco, this patch also fixes a minor bug in the new Table Styles feature.
> 
> Can this be cherry-picked as well?

Hi Rafael,
This issue has been around since at least LibreOffice 6.1.
At this point in time, only important issues/regressions should be backported to previews branches so I'd prefer to wait until 7.6...