tdf#154883 Set doc as modified on applying table style

Change-Id: I2a20f35f8b6730f256216cea718ac9020347f119
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150584
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>